--- a/css/slider.css
+++ b/css/slider.css
@@ -15,6 +15,10 @@
   display: none;
 }
 
+p {
+  width: 100px; height: auto;
+  margin: 10px auto;
+}
 a {
   padding: 5px 10px;
   margin-top: 30px;
